--- a/src/index.css
+++ b/src/index.css
@@ -207,7 +207,7 @@ header h1 {
 }
 .contenido-presupuesto p.negativo,
 .contenido-presupuesto p.negativo span {
-    color: red;
+    color: #f03437;
 }
 .contenido-presupuesto span {
     font-weight: 900;
@@ -260,6 +260,7 @@ main {
 .listado-gastos h2 {
     color: var(--gris-oscuro);
     font-weight: 900;
+    text-align: center;
 }
 .no-gastos {
     text-align: center;
@@ -279,6 +280,7 @@ main {
     font-size: 2.4rem;
     color: var(--negro);
     font-weight: 900;
+    user-select: none;
 }
 
 .contenido-gasto {
@@ -289,10 +291,12 @@ main {
 
 .contenido-gasto img {
     width: 10rem;
+    pointer-events: none;
 }
 
 .descripcion-gasto p {
     margin: 0 0 0.3rem 0;
+    user-select: none;
 }
 .descripcion-gasto .categoria {
     color: var(--gris);
